[package]
name = "custom_ci"
version = "0.1.0"
authors = ["Mitchell Berendhuysen <mitchellbhuysen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
rocket = "0.4.5"
